[gd_scene load_steps=15 format=3 uid="uid://blg3dqwh0kukr"]

[ext_resource type="Script" path="res://scripts/spawner.gd" id="1_ksj3h"]
[ext_resource type="PackedScene" uid="uid://cmyptxyc8gixb" path="res://scenes/base_level.tscn" id="1_ls7u1"]
[ext_resource type="Script" path="res://scripts/time_system.gd" id="2_gc8ho"]
[ext_resource type="PackedScene" uid="uid://d6y2kg53mmhi" path="res://scenes/player.tscn" id="2_sho21"]
[ext_resource type="Script" path="res://scripts/date_time.gd" id="3_7xfef"]
[ext_resource type="PackedScene" uid="uid://cri1u3jjbk6n8" path="res://ui/time_ui.tscn" id="5_rbjay"]
[ext_resource type="Script" path="res://ui/time_ui.gd" id="6_2ppgh"]
[ext_resource type="PackedScene" uid="uid://ce45d5h80s4t" path="res://scenes/day_night.tscn" id="6_iqqq7"]
[ext_resource type="Script" path="res://scripts/daynight_indicator.gd" id="7_0f1sk"]
[ext_resource type="PackedScene" uid="uid://d17l87lx172u4" path="res://scenes/shopkeeper.tscn" id="9_h44bl"]
[ext_resource type="PackedScene" uid="uid://dypocwi3xeert" path="res://scenes/shop.tscn" id="10_m4two"]
[ext_resource type="PackedScene" uid="uid://buy2nwh0efe2s" path="res://scenes/base_enemy.tscn" id="11_52000"]

[sub_resource type="Resource" id="Resource_htryv"]
script = ExtResource("3_7xfef")
seconds = 0
minutes = 0
hours = 5
days = 0

[sub_resource type="Resource" id="Resource_2unld"]
script = ExtResource("3_7xfef")
seconds = 0
minutes = 0
hours = 5
days = 0

[node name="main_game" type="Node"]

[node name="base_level" parent="." instance=ExtResource("1_ls7u1")]
position = Vector2(1, 1)

[node name="Player" parent="." instance=ExtResource("2_sho21")]
<<<<<<< HEAD:cowgame/scenes/main_game.tscn
position = Vector2(594, 346)
=======
position = Vector2(985, 551)
>>>>>>> 0463401804ce1ea890a0e9570ac5ba28a78ba41a:cowgame/cowgame/scenes/main_game.tscn

[node name="TimeSystem" type="Node" parent="."]
script = ExtResource("2_gc8ho")
date_time = SubResource("Resource_htryv")
ticks_pr_second = 6000

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TimeIndicator" parent="CanvasLayer" instance=ExtResource("5_rbjay")]
offset_left = 812.0
offset_top = 13.0
offset_right = 874.0
offset_bottom = 53.0
scale = Vector2(5.2, 5.2)
script = ExtResource("6_2ppgh")

[node name="day_night" parent="." node_paths=PackedStringArray("time_system") instance=ExtResource("6_iqqq7")]
day_time = SubResource("Resource_2unld")
time_system = NodePath("../TimeSystem")

[node name="daynight_indicator" type="Node" parent="."]
script = ExtResource("7_0f1sk")

[node name="shop" parent="." instance=ExtResource("10_m4two")]

[node name="BaseEnemy" parent="." instance=ExtResource("11_52000")]
visible = false

[node name="Spawner" type="Node2D" parent="."]
script = ExtResource("1_ksj3h")

[node name="headSpawn" type="Marker2D" parent="Spawner"]
position = Vector2(571, 408)

[node name="frontLegSpawn" type="Marker2D" parent="Spawner"]
position = Vector2(940, 1197)

[node name="backLegSpawn" type="Marker2D" parent="Spawner"]
position = Vector2(1725, 1217)

[node name="tailSpawn" type="Marker2D" parent="Spawner"]
position = Vector2(2082, 815)

[node name="Timer" type="Timer" parent="Spawner"]
autostart = true

<<<<<<< HEAD:cowgame/scenes/main_game.tscn
=======
[node name="shopkeeper" parent="." instance=ExtResource("9_h44bl")]

>>>>>>> 0463401804ce1ea890a0e9570ac5ba28a78ba41a:cowgame/cowgame/scenes/main_game.tscn
[connection signal="updated" from="TimeSystem" to="CanvasLayer/TimeIndicator" method="_on_time_system_updated"]
[connection signal="updated" from="TimeSystem" to="day_night" method="update"]
[connection signal="currentDayState" from="day_night" to="daynight_indicator" method="currentGameState"]
[connection signal="currentDayState" from="day_night" to="Spawner" method="nightTime"]
[connection signal="timeout" from="Spawner/Timer" to="Spawner" method="_on_timer_timeout"]
[connection signal="area_exited" from="shopkeeper" to="Player" method="_on_shopkeeper_area_exited"]
[connection signal="open_shop" from="shopkeeper" to="Player" method="_on_shopkeeper_open_shop"]
